@@ -5,11 +5,14 @@ import org.example.sprint1.dto.BasicSellerDTO;
 import org.example.sprint1.dto.ExceptionDTO;
 import org.example.sprint1.dto.FollowedSellersDTO;
 import org.example.sprint1.entity.Customer;
-import org.example.sprint1.entity.Seller;
 import org.example.sprint1.repository.CustomerRepository;
 import org.example.sprint1.repository.SellerRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import java.util.Comparator;
+import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -25,16 +28,19 @@ public class FollowService implements IFollowService {
         return null;
     }
     @Override
-    public FollowedSellersDTO getFollowedSellers(int userId){
+    public FollowedSellersDTO getFollowedSellers(int userId, String order) {
         ObjectMapper mapper = new ObjectMapper();
         mapper.findAndRegisterModules();
         Customer customer  =  customerRepository.getCustomerById(userId);
-        return new FollowedSellersDTO(userId, customer.getUserName(),
-                sellerRepository.getCustomersThatFollowsSellersById(userId)
-                        .stream().map( v -> mapper.convertValue(v, BasicSellerDTO.class)).toList()
-        );
+        List<BasicSellerDTO> sellers = sellerRepository.getCustomersThatFollowsSellersById(userId)
+                .stream().map( v -> mapper.convertValue(v, BasicSellerDTO.class)).collect(Collectors.toList());
 
+        if ("name_asc".equals(order)) {
+            sellers.sort(Comparator.comparing(BasicSellerDTO::getSellerName));
+        } else if ("name_desc".equals(order)) {
+            sellers.sort(Comparator.comparing(BasicSellerDTO::getSellerName).reversed());
+        }
 
+        return new FollowedSellersDTO(userId, customer.getUserName(), sellers);
     }
-
 }
